gccida/c0/reloads_conflict
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reloads_conflict/src/reload1.c:5154:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type r2_type; // [rsp+2Ch] [rbp-14h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reloads_conflict/src/reload1.c:5277:15: error: use of undeclared identifier 'off_88ECD0'
fancy_abort( &off_88ECD0[4], 4739, "reloads_conflict"); 
              ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reloads_conflict/src/obj/reload1.o] Error 1
